--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 		"zendframework/zend-servicemanager" : "~2.1",
 		"zendframework/zend-modulemanager" : "~2.1",
 		"zendframework/zend-stdlib" : "~2.1",
-		"zf-commons/zfc-base" : "0.*",
+		"zf-commons/zfc-base" : "0.*"
     },
     "require-dev": {
         "doctrine/doctrine-orm-module": "0.*"
