--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 		"zendframework/zend-servicemanager" : "~2.1",
 		"zendframework/zend-modulemanager" : "~2.1",
 		"zendframework/zend-stdlib" : "~2.1",
+		"doctrine/doctrine-orm-module" : "*",
 		"zf-commons/zfc-base" : "0.*"
     },
     "require-dev": {
