Assetic is on its way !

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 		"zendframework/zend-modulemanager" : "~2.1",
 		"zendframework/zend-stdlib" : "~2.1",
 		"doctrine/doctrine-orm-module" : "*",
-		"zf-commons/zfc-base" : "0.*"
+		"zf-commons/zfc-base" : "0.*",
+		"widmogrod/zf2-assetic-module": "1.*"
     },
     "require-dev": {
         "doctrine/doctrine-orm-module": "0.*"
