--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
 		"zendframework/zend-stdlib" : "~2.1",
 		"doctrine/doctrine-orm-module" : "*",
 		"zf-commons/zfc-base" : "0.*",
-		"widmogrod/zf2-assetic-module": "dev-master"
+		"widmogrod/zf2-assetic-module": "1.3.1"
 
     },
     "require-dev": {
