--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,12 @@
 		"zendframework/zend-modulemanager" : "~2.1",
 		"zendframework/zend-stdlib" : "~2.1",
 		"doctrine/doctrine-orm-module" : "*",
-		"zf-commons/zfc-base" : "0.*",
-		"widmogrod/zf2-assetic-module": "1.3.1"
-
+		"widmogrod/zf2-assetic-module": "1.3.1",
+		"doctrine/data-fixtures" : "dev-master",
+		"hounddog/doctrine-data-fixture-module": "dev-master",
+		"zendframework/zend-developer-tools" : "dev-master",
+		"jhuet/zdt-logger-module" : "0.*",
+		"zf-commons/zfc-base" : "0.*"
     },
     "require-dev": {
         "doctrine/doctrine-orm-module": "0.*"
