--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,11 @@
 		"doctrine/doctrine-orm-module" : "*",
 		"widmogrod/zf2-assetic-module": "1.3.1",
 		"doctrine/data-fixtures" : "dev-master",
-		"hounddog/doctrine-data-fixture-module": "dev-master",
+		"hounddog/doctrine-data-fixture-module": "0.*",
 		"zendframework/zend-developer-tools" : "dev-master",
 		"jhuet/zdt-logger-module" : "0.*",
-		"zf-commons/zfc-base" : "0.*"
+		"zf-commons/zfc-base" : "0.*",
+		"bjyoungblood/bjy-authorize" : "1.1.*"		
     },
     "require-dev": {
         "doctrine/doctrine-orm-module": "0.*"
