--- a/config/adfabcore.local.php.dist
+++ b/config/adfabcore.local.php.dist
@@ -6,7 +6,7 @@ $settings = array(
      * TODO : Descendre jusqu'à l'action
      */
     /*'core_layout' => array(
-            'AdfabUser' => 'layout/1column',
+            'PlaygroundUser' => 'layout/1column',
     ),*/
 
     /**
